--- a/biicode.conf
+++ b/biicode.conf
@@ -6,6 +6,7 @@
     # user2/depblock2(track) @tag
 
 [parent]
+    david/WiringPi: 0
     # The parent version of this block. Must match folder name. E.g.
     # user/block  # No version number means not published yet
     # You can change it to publish to a different track, and change version, e.g.
